data/all_generated_tests/raw_wast_tests/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1359.wast
;; 10. **Test Description:**     - **Test Name:** Combined Branch in Import and Export Test     - **Objective:** Validate branching behaviors when both import and export function calls are involved, with `br` instructions used.     - **Constraint:** Checks if control flow instructions handle transitions between imported and exported functions without corrupting the stack.     - **Relation to Incorrect Handling:** Ensures proper execution and control flow integrity when branching occurs between multiple function calls across module boundaries.

(assert_invalid
 (module
  (import "env" "external_func" (func $external_func))
  (func (export "test_func")
   (block (result i32)
    (br 0)
    (call $external_func) (i32.const 1)
   )
  )
 )
 "type mismatch"
)